ingress-bankapp.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-shop-ingress
  namespace: hemantsharma
  annotations:
    ingress.citrix.com/insecure-termination: "redirect"
    ingress.citrix.com/ipam-range: "descolfrnsint"
    ingress.citrix.com/preconfigured-certkey : '{"certs": [ {"name": "int_wildcard_hella_com"} ] }'
    ingress.citrix.com/servicegroup: '{"onlineshop-ui":{"usip": "No"}}'
spec:
  ingressClassName: descolfrnsint
  tls:
  - secretName:
  rules:
  - host: onlineshop-descolfr-rk2-test.hella.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: online-shop-service
            port:
              number: 3000
